# py-spotify-unwrapped

./: .gitignore  NOTES.md  README.md  main.ipynb  pyproject.toml
docs/: CHALLEGE.md  NOTES.md  OBSERVATIONS.md
docs/notebook/: spotipy.ipynb
docs/templates/: spotify-wrapped-template.pptx
src/: constants.py  main.py
src/core/automation/: butter.py  powerpoint.py
src/core/scrapping/: spotify.py
templates/: spotify-wrapped-template.pptx
